--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Deploy
         uses: azure/webapps-deploy@v3
         with:
-          app-name: "ugdxdemo"
+          app-name: "demougdx"
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
